--- a/final2.html
+++ b/final2.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<!-- Cyril Vedder          Final Project CIS 115        3/5/14 -->
+<!-- Cyril Vedder          Final Project -->
 <head>
     <title>Final Project: Paint Program</title>
     <meta charset="utf-8">
